Fixes links/ <a href> bleeding through spoilers.

--- a/add-to-default.css
+++ b/add-to-default.css
@@ -3,3 +3,11 @@
     float: left;
     padding: 16px 0px 0px 20px;
   }
+
+  div.spoiler > p > a  {
+    color: #EEE;
+  }
+
+  div.spoiler > p:hover > a {
+    color: #FF761C;
+  }
